<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvEntrada"
                android:textSize="40sp"
                android:background="@color/black"
                android:textAlignment="textEnd"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/tvResultado"
                android:textSize="60sp"
                android:background="@color/black"
                android:textAlignment="textEnd"
                android:maxLines="1"
                android:ellipsize="end"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BotonFuncional"
                        android:id="@+id/btClear"
                        android:text="@string/clear"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BotonFuncional"
                android:id="@+id/btBorrar1"
                android:text="@string/borrar"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/numero"
                android:id="@+id/btPunto"
                android:text="@string/_punto"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BotonFuncional2"
                android:id="@+id/btDivirdir"
                android:text="@string/dividir"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt7"
                        android:text="@string/_7"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt8"
                        android:text="@string/_8"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt9"
                        android:text="@string/_9"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BotonFuncional2"
                        android:id="@+id/btMultiplicar"
                        android:text="@string/multiplicar"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt4"
                        android:text="@string/_4"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt5"
                        android:text="@string/_5"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt6"
                        android:text="@string/_6"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BotonFuncional2"
                        android:id="@+id/btRestar"
                        android:text="@string/restar"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt1"
                        android:text="@string/_1"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt2"
                        android:text="@string/_2"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt3"
                        android:text="@string/_3"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BotonFuncional2"
                        android:id="@+id/btSumar"
                        android:text="@string/suma"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/bt0"
                        android:text="@string/_0"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/btOpen"
                        android:text="@string/open"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/numero"
                        android:id="@+id/btClose"
                        android:text="@string/close"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/igual"
                        android:id="@+id/btIgual"
                        android:text="@string/igual"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>
        </LinearLayout>

</LinearLayout>

<!--<GridLayout-->

<!--android:layout_width="wrap_content"-->
<!--android:layout_height="match_parent"-->
<!--android:columnCount="4"-->
<!--android:rowCount="5"-->
<!--android:layout_margin="2dp">-->

<!--<Button-->
        <!--style="@style/BotonFuncional"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:id="@+id/btClear"-->
        <!--android:text="@string/clear"-->
        <!--android:layout_column="0"-->
        <!--android:layout_row="0"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/BotonFuncional"-->
        <!--android:id="@+id/btMasMenos"-->
        <!--android:text="@string/masmenos"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="0"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/BotonFuncional"-->
        <!--android:id="@+id/btPorcentaje"-->
        <!--android:text="@string/porcentaje"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="0"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/BotonFuncional2"-->
        <!--android:id="@+id/btDividir"-->
        <!--android:text="@string/dividir"-->
        <!--android:layout_column="3"-->
        <!--android:layout_row="0"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/BotonFuncional2"-->
        <!--android:id="@+id/btMultiplicar"-->
        <!--android:text="@string/multiplicar"-->
        <!--android:layout_column="3"-->
        <!--android:layout_row="1"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/BotonFuncional2"-->
        <!--android:id="@+id/btRestar"-->
        <!--android:text="@string/restar"-->
        <!--android:layout_column="3"-->
        <!--android:layout_row="2"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/BotonFuncional2"-->
        <!--android:id="@+id/btSumar"-->
        <!--android:text="@string/suma"-->
        <!--android:layout_column="3"-->
        <!--android:layout_row="3"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/igual"-->
        <!--android:id="@+id/btResultado"-->
        <!--android:text="@string/igual"-->
        <!--android:layout_column="3"-->
        <!--android:layout_row="4"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt7"-->
        <!--android:text="@string/_7"-->
        <!--android:layout_column="0"-->
        <!--android:layout_row="1"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt8"-->
        <!--android:text="@string/_8"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="1"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->
<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt9"-->
        <!--android:text="@string/_9"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="1"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt4"-->
        <!--android:text="@string/_4"-->
        <!--android:layout_column="0"-->
        <!--android:layout_row="2"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt5"-->
        <!--android:text="@string/_5"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="2"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt6"-->
        <!--android:text="@string/_6"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="2"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt1"-->
        <!--android:text="@string/_1"-->
        <!--android:layout_column="0"-->
        <!--android:layout_row="3"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt2"-->
        <!--android:text="@string/_2"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="3"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt3"-->
        <!--android:text="@string/_3"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="3"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/bt0"-->
        <!--android:text="@string/_0"-->
        <!--android:layout_column="0"-->
        <!--android:layout_row="4"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
        <!--android:layout_columnSpan="2"-->
<!--/>-->

<!--<Button-->
        <!--style="@style/numero"-->
        <!--android:id="@+id/btpunto"-->
        <!--android:text="@string/_punto"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="4"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_columnWeight="1"-->
<!--/>-->

<!--</GridLayout>-->